# GameDev-Learning-Journal

./: .gitignore  README.md  ~$已知要学习的内容.docx  目前已知要学习的内容.docx
实战区/01-数学库/: CMakeLists.txt  test_mat4.cpp  test_vec3.cpp
实战区/01-数学库/include/: Mat4.h  Vec3.h  Vec4.h
实战区/02-第一个OpenGL项目/02-第一个OpenGL项目/: 02-第一个OpenGL项目.vcxproj  02-第一个OpenGL项目.vcxproj.filters  main.cpp
实战区/03-你好，三角形/03-你好，三角形/: 03-你好，三角形.vcxproj  main.cpp
实战区/04-着色器类和Uniform学习/04-着色器类和Uniform学习/: main.cpp
实战区/04-着色器类和Uniform学习/04-着色器类和Uniform学习/Shaders/: fShader.glsl  vShader.glsl
实战区/05-纹理学习/05-纹理学习/: main.cpp
实战区/06-变换学习/06-变换学习/: main.cpp
实战区/07-坐标系统/07-坐标系统/: main.cpp
实战区/08-摄像机/08-摄像机/: main.cpp
实战区/09-创建一个光照环境/09-创建一个光照环境/: main.cpp
实战区/10-基础光照/10-基础光照/: main.cpp
每日学习日志/2026-04/: 2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md
每日学习日志/2026-05/: 2026-05-01~06.md  2026-05-07.md  2026-05-08~10.md
知识基础/01-C++/01-内存模型/: 01-C++内存模型.md  02-C++动态内存管理.cpp  02-C++动态内存管理方式.md  03-指针和引用.md  04-C++智能指针.cpp  04-C++智能指针.md  05-内存对齐.cpp  05-内存对齐.md  06-内存池.cpp  06-内存池.md
知识基础/01-C++/02-面向对象/: 01-封装.md  02-对象的初始化和清理.md  03-C++对象模型和this指针.md  04-友元.md  05-运算符重载.cpp  05-运算符重载.md  06-继承.cpp  06-继承.md  07-多态.cpp  07-多态.md
知识基础/02-图形学理论基础/: 光栅化(Rasterization).md  光线追踪(RayTracing).md  几何(Geometry).md  变换(Transformation).md  着色(Shading).md  转换(Transformation).md
知识基础/03-算法学习/: 01-线性插值.md  01-线性插值算法实现.cpp
知识基础/04-图形学代码学习/: 01-窗口创建代码.md  02-创建一个三角形.md  03-着色器.md  04-纹理.md  05-变换.md  06-坐标.md  07-摄像机.md  08-颜色.md  09-基础光照.md
资源/: 图形学学习.md
(+39 files in other folders)
